# PySpinMultiCam

./: PySpinMultiCam.py  README.md  pyproject.toml
.github/workflows/: push_new_wheel.yml
src/PySpinMultiCam/: PySpinMultiCam.py  __init__.py
